# PortMonitor

./: .gitignore  pyproject.toml
Serial_Port/: app_SerialWindows.py  config.json
docs/: PPT_planning.md  README_diagrams.md  demo.typ  docs.md  presentation.md  technical_implementation.md
